# m5-watcher

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  WAR_ROOM_DESIGN_PLAN.md  __main__.py  app.py  app_war_room.py  cli_commands.py  data_sources.py  feed_aggregator.py  feed_populators.py  feed_tentacoli_enrich.py  graph_widget.py  health_widget.py  kpi_widget.py  llms.txt  metrics.py  plugin_loader.py  polpo.tokens.json  polpo_charts.py  polpo_heartbeat_widget.py  pyproject.toml  radar_widget.py  requirements.txt  roadmap_blocks.py  roadmap_common.py  roadmap_filaments.py  roadmap_outstanding.py  roadmap_polestar.py  roadmap_traps.py  roadmap_vectors.py  run.sh  run_war_room.sh  semantic_areas.json  serve_web.py  serve_web.sh  test_app_war_room.py  test_bench.py  (+12 more)
bench/: run_bench.py
plugins/: claude_advisor.py
scripts/: lint_tab_boxes.py
scripts/rebrand/: README.md  m5_launcher.c  m5_watcher_rebrand.sh
templates/: new_tab_template.py
