[project]
name = "m5-watcher"
version = "2.5.0"
description = "🐙 Visual Analytics TUI for Apple Silicon — Polpo Cockpit Suite"
requires-python = ">=3.10"
authors = [{name = "Mattia Calastri", email = "mattia@digitalastra.it"}]
license = {text = "Proprietary"}
readme = "README.md"
dependencies = [
    "textual>=0.86",
    "rich>=13.7",
    "psutil>=5.9",
    "networkx>=3.0",
]

[project.optional-dependencies]
toml = ["tomli>=2.0;python_version<'3.11'"]

[project.scripts]
m5-watcher = "app:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "app",
    "data_sources",
    "vault_parser",
    "graph_widget",
    "kpi_widget",
    "polpo_charts",
    "metrics",
    "cli_commands",
]
